# linear_motion

./: CMakeLists.txt  README.md  linear_motion.cpp  linear_motion.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt_occ_draw/: OcctQtViewer.cpp  draw_primitives.cpp  draw_primitives.h
